- zamiana konta do wysyłania meili z alakwiatkowska648@gmail.com na wsparcieBadanieKrwi@gmail.com i aktualizacja hasła aplikacji

--- a/App.config
+++ b/App.config
@@ -6,7 +6,7 @@
 	<appSettings>
 		<add key="EmailSmtp" value="smtp.gmail.com"/>
 		<add key="EmailPort" value="587"/>
-		<add key="EmailSender" value="alakwiatkowska648@gmail.com"/>
-		<add key="EmailSenderPassword" value="lwsw gcev ewpo oynn"/>
+		<add key="EmailSender" value="wsparcieBadaniaKrwi@gmail.com"/>
+		<add key="EmailSenderPassword" value="gyup dcts fbjq dcim"/>
 	</appSettings>
 </configuration>
