--- a/App.config
+++ b/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="ConnectionString" connectionString="Data Source=localhost;Database=Badania_Krwi;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=true;Connect Timeout=30;" />
+		<add name="ConnectionString" connectionString="Data Source=DESKTOP-M3PIB3L\SQLEXPRESS;Database=Badania_Krwi;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=true;Connect Timeout=30;" />
 	</connectionStrings>
 	<appSettings>
 		<add key="EmailSmtp" value="smtp.gmail.com"/>
